--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@supabase/supabase-js": "^2.45.2",
     "@vercel/postgres": "^0.9.0",
     "bun": "^1.1.22",
+    "path-to-regex": "^1.3.8",
     "pocketbase": "^0.21.2",
     "svelte-adapter-azure-swa": "^0.20.1",
     "vercel": "^32.3.0"
